@@ -1,14 +1,14 @@
 Package: RxnSim
 Type: Package
 Title: Functions to Compute Chemical Reaction Similarity
-Version: 1.0.3
-Date: 2017-07-25
+Version: 1.0.4
+Date: 2023-07-15
 Authors@R: person("Varun", "Giri", role=c("aut", "cre"), email="varungiri@gmail.com")
 Maintainer: Varun Giri <varungiri@gmail.com>
 Description: Methods to compute chemical similarity between two or more reactions and molecules. Allows masking of chemical substructures for weighted similarity computations. Uses packages 'rCDK' and 'fingerprint' for cheminformatics functionality.
 License: GPL
-Depends: R (>= 2.5.0)
-Imports: rJava, fingerprint, data.table, rcdk (>= 3.4.3)
+Depends: R (>= 4.3.0)
+Imports: rJava, fingerprint, data.table, rcdk (>= 3.8.1)
 Author: Varun Giri [aut, cre]
 NeedsCompilation: no
 Repository: CRAN
